2009-04-10  Jaap Haitsma  <jaap@haitsma.org>

	* modulesets/gnome-2.28.modules: tracker moved to git

2009-04-09  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.26.modules: gnome-python-extras: libgda, not gda.

2009-04-09  Murray Cumming  <murrayc@murrayc.com>

	* modulesets/gnome-2.26.modules:
	* modulesets/gnome-2.28.modules: gnome-python-extras: Depend on libgda.
	I am surprised that this was not the case before.

2009-04-08  Zeeshan Ali (Khattak)  <zeeshanak@gnome.org>

	* modulesets/gnome-2.26.modules: Use new vala release (0.7.0).

2009-04-07  Owen Taylor  <otaylor@redhat.com>

	* install-check.c (main): Clean up my last commit by removing
	and unused variable.

2009-04-07  Owen Taylor  <otaylor@redhat.com>

	Bug 571240 – Search for 'install' binary at run time

	* install-check.c (main): Some systems (in particular Arch Linux)
	use put the install executable somewhere other than
	/usr/bin/install. So use execvp() rather than execv() to run the
	system install.

2009-04-06  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.26.modules: evince and gnome-keyring opened
	their 2.26 branches.

2009-04-06  Frederic Peters  <fpeters@0d.be>

	* modulesets/gnome-suites-2.20.modules:
	* modulesets/gnome-suites-2.22.modules:
	* modulesets/gnome-suites-2.24.modules:
	* modulesets/gnome-suites-2.26.modules:
	* modulesets/gnome-suites-2.28.modules: switched glib and gtk+ to
	git.gnome.org.

2009-04-05  Felix Riemann  <friemann@svn.gnome.org>

	* modulesets/gnome-suites-2.26.modules: Fix eog branch.

2009-04-05  Felix Riemann  <friemann@svn.gnome.org>

	* modulesets/gnome-suites-2.26.modules: eog branched for 2.26.

2009-03-31  José Alburquerque  <jaalburqu@svn.gnome.org>

	* modulesets/gnome-2.22.modules:
	* modulesets/gnome-2.24.modules: Removed gstreamermm-plugins-good from
	previous stable versions; sorry for including in previous commit.

2009-03-31  José Alburquerque  <jaalburqu@svn.gnome.org>

	* modulesets/gnome-2.22.modules: