@@ -1,3 +1,7 @@
+2009-04-12  Frederic Peters  <fpeters@0d.be>
+
+	* jhbuild/buildbot/changes.py: added support for git commit emails.
+
 2009-04-10  Jaap Haitsma  <jaap@haitsma.org>
 
 	* modulesets/gnome-2.28.modules: tracker moved to git
